Tweak site description.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Head First Ruby
 email: feedback@headfirstruby.com
 description: > # this means to ignore newlines until "baseurl:"
-  The official website for Head First Ruby, written by Jay McGavren and published by O'Reilly Media.
+  This is the official website for Head First Ruby, written by Jay McGavren and published by O'Reilly Media.
   You'll find sample code from the book here, as well as ideas to get you started on your own Ruby projects!
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://headfirstruby.com" # the base hostname & protocol for your site
